@@ -1,0 +1,15 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:i18n="http://namespaces.zope.org/i18n">
+
+    <browser:page
+        name="conversation_view"
+        for="Products.CMFCore.interfaces.IContentish"
+        layer="plone.app.discussion.interfaces.IDiscussionLayer"
+        class=".browser.conversation.ConversationView"
+        permission="zope2.View"
+        />
+
+</configure>
